<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMeds</string>
    <string name="navigation_drawer_title_list">List</string>
    <string name="navigation_drawer_title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string-array name="os">
        <item>a1</item>
        <item>b2</item>
        <item>c3</item>
        <item>d4</item>
        <item>e5</item>
        <item>f6</item>
    </string-array>

    <string name="title_activity_add_new_med">Add new med</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- FORM Values -->
    <string name="form_med_name">Name</string>
    <string name="form_days">Days</string>
    <string name="form_days_sun">Sunday</string>
    <string name="form_days_mon">Monday</string>
    <string name="form_days_tue">Tuesday</string>
    <string name="form_days_wed">Wednesday</string>
    <string name="form_days_thu">Thursday</string>
    <string name="form_days_fri">Friday</string>
    <string name="form_days_sat">Saturday</string>

    <string name="form_pick_time">Pick Hour</string>
    <string name="form_time_text">00:00</string>
    <string name="form_time_title">First Notification Time</string>
    <string name="form_repeat_time_title">Repeat every (hours)</string>
    <string name="form_time_value">0 hours</string>
    <string name="form_icon_title">Icon</string>

    <string name="list_starting_hour">Starting hour:</string>
    <string name="list_repeating_every">Repeating every:</string>
    <string name="list_repeating_hours">h</string>
    <string name="notification_description">Please Take your medicine!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_enabled_settings_title">Notifications Enabled</string>
    <string name="notification_enabled_settings_summary">Notifications reminders when it\'s time to take your meds</string>
    <string name="notification_category_settings_title">Notifications</string>
    <string name="sms_warning_category_settings_title">SMS Warning</string>
    <string name="sms_warning_enabled_settings_title">SMS Warning Enabled</string>
    <string name="sms_warning_enabled_settings_summary">When enabled, a SMS is sent to the chosen number, if the medication is not taken after a timeout</string>
    <string name="settings_sms_warning_sms_number_summary">Pick the destination phone number</string>
    <string name="settings_sms_warning_sms_number_title">SMS Destination Number</string>
    <string name="settings_sms_warning_sms_timeout_title">Timeout for sending the SMS</string>
    <string name="settings_sms_warning_sms_timeout_summary">Choose the SMS timeout</string>
    <string name="number_picker_dialog_title">Pick the Timeout time (min)</string>
    <string name="sms_message">MyMeds: I didn\'t take my medicine. Please check on me</string>
    <string name="title_activity_edit_med">Edit Med</string>

</resources>
